--overflow-fix

--- a/style.scss
+++ b/style.scss
@@ -17,6 +17,7 @@ h3 {
         "Open Sans", "Helvetica Neue", sans-serif;
 }
 body {
+    overflow: hidden;
     height: 100vh;
     display: flex;
     width: 100%;
